# wav2lip-onnx-HQ-custom

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  audio.py  inference_onnxModel.py  pyproject.toml  requirements.txt
.github/workflows/: style_checks.yml
blendmasker/: blendmask.py
checkpoints/: wav2lip_gan.onnx
enhancers/Codeformer/: Codeformer.py
enhancers/GFPGAN/: GFPGAN.py
enhancers/GPEN/: GPEN.py
enhancers/RealEsrgan/: esrganONNX.py
enhancers/restoreformer/: restoreformer16.py  restoreformer32.py
faceID/: faceID.py  recognition.onnx
resemble_denoiser/: denoiser_fp16.onnx  resemble_denoiser.py
src/lipsync/: __init__.py
src/lipsync/core/: __init__.py  hparams.py
src/lipsync/core/audio/: __init__.py  processing.py
src/lipsync/core/enhancement/: __init__.py  codeformer.py  restoreformer.py
src/lipsync/core/face/: __init__.py  alignment.py  detection.py  masking.py  recognition.py
src/lipsync/core/face/models/: blendmasker.onnx
src/lipsync/core/segmentation/models/: xseg.onnx
src/lipsync/models/: __init__.py
src/lipsync/models/wav2lip/: __init__.py  inference.py
src/lipsync/models/wav2lip/models/: wav2lip.onnx
src/lipsync/scripts/: wav2lip_inference.py
utils/: retinaface.py
xseg/: xseg.py
