[project]
name = "wav2lip-onnx-hq-custom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "imutils==0.5.4",
    "insightface==0.7.3",
    "librosa==0.10.1",
    "numba==0.58.1",
    "numpy==1.26.4",
    "onnx==1.16.0",
    "onnxruntime==1.16.3",
    "opencv-contrib-python==4.9.0.80",
    "opencv-python==4.8.0.76",
    "tqdm==4.66.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.2",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = [".venv", "data", ".vscode", ".github"]
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
